Change a little message on  header-text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <p class="header-text">
             In a small shop in the heart of Lisbon, we spend our days
             relentlessly perfecting the chair. The result is a perfect blend of
-            beauty and comfort, that will have a lasting impact on your health.
+            beauty and comfort, that will have a lasting impact on your physical
+            and mental health.
           </p>
           <a class="btn btn--big" href="#">Shop chairs</a>
         </div>
